# api-llm-chat-cli

./: README.md  pyproject.toml
app/: __init__.py  cli.py  config.py  llm.py  utils.py
models/: sentence_transformer_model.py
